[package]
name = "spring-crabs"
version = "0.0.1"

[dependencies]
glium = "^0.16.0"
cgmath = "^0.12"
libc = "0.2.20"

[replace]
"glutin:0.7.4" = { path = "../glutin" }
# "backtrace:*" = { git = "https://github.com/badboy/backtrace-rs", branch = "emscripten-fix" }
"winit:0.5.10" = { path = "../winit" }
